[TAL-87] Fix covers in dark mode (1)

--- a/less/forum.less
+++ b/less/forum.less
@@ -81,9 +81,6 @@ body when (@config-dark-mode =true) {
     .sideNav .Dropdown--select {
 		background: #15202b !important;
 	}
-	.Hero {
-		background: #15202b !important;
-	}
 	.Hero-title {
 		color: rgb(255, 255, 255) !important;
 	}
@@ -667,7 +664,6 @@ body .Post.CommentPost {
 
 .Hero {
   box-shadow: 0 1px 10px 0 rgba(151, 158, 181, 0.28) !important;
-  background-color: #fff !important;
   margin-bottom: 15px;
 }
 
